K8S/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-shell
spec:
  containers:
    - name: shell
      image: busybox
      command: ["sleep", "3600"]
      securityContext:
        privileged: true
      volumeMounts:
        - name: host-root
          mountPath: /host
  volumes:
    - name: host-root
      hostPath:
        path: /
        type: Directory
  restartPolicy: Never
