K8S/payrolls-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: payrolls-depl
spec: 
  replicas: 1
  selector: 
     matchLabels:
       app: payrollservice
  template: 
    metadata:
      labels:
        app: payrollservice
    spec:
      containers: 
         - name: payrollservice
           image: nkaka23dev/payrollservice:latest
