K8S/payrolls-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: payrollsnpservice-srv
spec:
  type: NodePort
  selector:
    app: payrollservice 
  ports: 
    - name: payrollservice
      protocol: TCP
      port: 80
      targetPort: 80
