K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations: 
    nginx.ingress.kubernetes.io/use-regex: 'true' 
spec: 
  ingressClassName: nginx
  rules: 
    - host: employee-plt.com
      http: 
        paths: 
          - path: /api/payroll 
            pathType: Prefix 
            backend: 
              service: 
                name: payrollservice-clusterip-srv
                port:
                  number: 80
          - path: /api/c/payroll
            pathType: Prefix
            backend: 
              service:
                name: timetrackingservice-clusterip-srv
                port: 
                  number: 80
